force-app/main/default/objects/Account/fields/count_of_Closedof_opp__c.field-meta.xml
<CustomField>
    <fullName>count_of_Closedof_opp__c</fullName>
    <label>count of Closedof opp</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>closed won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>