force-app/main/default/objects/Account/fields/count_of_greater_Then_10000_oppc__c.field-meta.xml
<CustomField>
    <fullName>count_of_greater_Then_10000_oppc__c</fullName>
    <label>count of greater Then 10000 oppc</label>
    <summaryFilterItems>
        <field>Opportunity.Amount</field>
        <operation>greaterThan</operation>
        <value>10000</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>