force-app/main/default/objects/Account/fields/count_of_oppc__c.field-meta.xml
<CustomField>
    <fullName>count_of_oppc__c</fullName>
    <label>count of oppc</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>