force-app/main/default/objects/Account/fields/min__c.field-meta.xml
<CustomField>
    <fullName>min__c</fullName>
    <label>min</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>