force-app/main/default/objects/Account/fields/sum_of_opp__c.field-meta.xml
<CustomField>
    <fullName>sum_of_opp__c</fullName>
    <label>sum of opp</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2022</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>